--- a/Android/app/src/main/res/layout/fragment_monster.xml
+++ b/Android/app/src/main/res/layout/fragment_monster.xml
@@ -69,5 +69,267 @@
             app:layout_constraintTop_toBottomOf="@+id/divider1"
             tools:text="Armor Class 15" />
 
+        <TextView
+            android:id="@+id/hit_points"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/armor_class"
+            tools:text="Hit Points 1 (1d4 - 1)" />
+
+        <TextView
+            android:id="@+id/speed"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hit_points"
+            tools:text="10 ft., fly 30 ft." />
+
+        <ImageView
+            android:id="@+id/divider2"
+            android:layout_width="0dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/section_divider"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_section_divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/speed" />
+
+        <!-- Strength -->
+        <TextView
+            android:id="@+id/label_str"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/label_dex"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:text="@string/strength_abbreviation"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/strength"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@+id/label_str"
+            app:layout_constraintEnd_toEndOf="@+id/label_str"
+            app:layout_constraintTop_toBottomOf="@+id/label_str"
+            android:textAlignment="center"
+            tools:text="2 (-4)" />
+
+        <!-- Dexterity -->
+        <TextView
+            android:id="@+id/label_dex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toEndOf="@+id/label_str"
+            app:layout_constraintEnd_toStartOf="@+id/label_con"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:text="@string/dexterity_abbreviation"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/dexterity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@+id/label_dex"
+            app:layout_constraintEnd_toEndOf="@+id/label_dex"
+            app:layout_constraintTop_toBottomOf="@+id/label_dex"
+            android:textAlignment="center"
+            tools:text="20 (+5)" />
+
+        <!-- Constitution -->
+        <TextView
+            android:id="@+id/label_con"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toEndOf="@+id/label_dex"
+            app:layout_constraintEnd_toStartOf="@+id/label_int"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:text="@string/constitution_abbreviation"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/constitution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@+id/label_con"
+            app:layout_constraintEnd_toEndOf="@+id/label_con"
+            app:layout_constraintTop_toBottomOf="@+id/label_con"
+            tools:text="8 (-1)" />
+
+        <!-- Intelligence -->
+        <TextView
+            android:id="@+id/label_int"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toEndOf="@+id/label_con"
+            app:layout_constraintEnd_toStartOf="@+id/label_wis"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:text="@string/intelligence_abbreviation"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/intelligence"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@+id/label_int"
+            app:layout_constraintEnd_toEndOf="@+id/label_int"
+            app:layout_constraintTop_toBottomOf="@+id/label_int"
+            android:textAlignment="center"
+            tools:text="10 (+0)" />
+
+        <!-- Wisdom -->
+        <TextView
+            android:id="@+id/label_wis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toEndOf="@+id/label_int"
+            app:layout_constraintEnd_toStartOf="@+id/label_cha"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:text="@string/wisdom_abbreviation"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/wisdom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@+id/label_wis"
+            app:layout_constraintEnd_toEndOf="@+id/label_wis"
+            app:layout_constraintTop_toBottomOf="@+id/label_wis"
+            android:textAlignment="center"
+            tools:text="14 (+2)" />
+
+        <!-- Charisma -->
+        <TextView
+            android:id="@+id/label_cha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toEndOf="@+id/label_wis"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:text="@string/charisma_abbreviation"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/charisma"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@+id/label_cha"
+            app:layout_constraintEnd_toEndOf="@+id/label_cha"
+            app:layout_constraintTop_toBottomOf="@+id/label_cha"
+            android:textAlignment="center"
+            tools:text="15 (+2)" />
+
+        <ImageView
+            android:id="@+id/divider3"
+            android:layout_width="0dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/section_divider"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_section_divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/strength" />
+
+        <TextView
+            android:id="@+id/saving_throws"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider3"
+            tools:text="Saving Throws" />
+
+        <TextView
+            android:id="@+id/skills"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/saving_throws"
+            tools:text="Skills" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
