--- a/app/src/main/res/layout/fragment_monster.xml
+++ b/app/src/main/res/layout/fragment_monster.xml
@@ -383,5 +383,18 @@
             app:layout_constraintTop_toBottomOf="@+id/damage_immunities"
             tools:text="Condition Immunities" />
 
+        <TextView
+            android:id="@+id/senses"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/condition_immunities"
+            tools:text="Senses" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
