--- a/Android/app/src/main/res/layout/fragment_monster.xml
+++ b/Android/app/src/main/res/layout/fragment_monster.xml
@@ -396,5 +396,18 @@
             app:layout_constraintTop_toBottomOf="@+id/condition_immunities"
             tools:text="Senses" />
 
+        <TextView
+            android:id="@+id/languages"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/senses"
+            tools:text="Languages" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
