--- a/app/src/main/res/layout/fragment_monster.xml
+++ b/app/src/main/res/layout/fragment_monster.xml
@@ -409,5 +409,18 @@
             app:layout_constraintTop_toBottomOf="@+id/senses"
             tools:text="Languages" />
 
+        <TextView
+            android:id="@+id/challenge"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/languages"
+            tools:text="Challenge" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
