--- a/Android/app/src/main/res/layout/fragment_monster.xml
+++ b/Android/app/src/main/res/layout/fragment_monster.xml
@@ -437,5 +437,48 @@
             app:layout_constraintTop_toBottomOf="@+id/challenge"
             tools:text="Damage Vulnerabilities" />
 
+        <TextView
+            android:id="@+id/label_actions"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/abilities"
+            android:text="@string/actions_label" />
+
+        <ImageView
+            android:id="@+id/divider4"
+            android:layout_width="0dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/section_divider"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_section_divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/label_actions" />
+
+        <!-- Actions -->
+        <LinearLayout
+            android:id="@+id/actions"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider4"
+            tools:text="Damage Vulnerabilities" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
